--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="demo">
         <h2>Welcome to inkVision, where temporary tattoos come to life!</h2>
-        <video src="Assets/Video/inkVision Promo Video.mp4" controls></video>
+        <video src="https://res.cloudinary.com/ddzgasz1x/video/upload/v1733757900/inkVision_Promo_Video_lpd1ou.mp4" controls></video>
     </div>
 
     <div class="section">
