--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="section">
         <div id="how" class="how">
             <h3>How to Enjoy Your Tattoo!</h3>
-            <video src="Assets/Video/How To.mp4" controls></video>
+            <iframe width="239" height="424.5" src="https://www.youtube.com/embed/SD8-FSRsqcQ" title="How To Enjoy your inkVision Temporary Tattoo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <ol>
                 <li>Skin should be clean & dry.</li>
                 <li>Remove clear top sheet.</li>
